# sneaky_thing

./: .gitignore  Cargo.toml  Makefile  README.md  notes.txt  todos.txt
libs/targeter/src/: lib.rs
smblib/: Cargo.toml
smblib/src/: lib.rs
src/: main.rs
src/dropper/: Cargo.toml  main.rs
src/dropper/targeter/: Cargo.toml
src/payload/: Cargo.toml  main.rs
src/payload/vm_detector/: Cargo.toml
src/payload/vm_detector/src/: lib.rs
targeter/: Cargo.toml
targeter/src/: lib.rs
targeter/src/targeter/: errors.rs
vm_detector/: Cargo.toml
vm_detector/src/: lib.rs
