[package]
name = "sneaky_encryptor"
version = "0.1.0"
authors = ["Probably Winston Churchill <nicolas.p.ammann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["vm_detector", 
           "targeter"]

[dependencies]
vm_detector = {path="vm_detector", version="*"}
targeter = {path="targeter", version="*"}
