[package]
name = "targeter"
version = "0.1.0"
authors = ["Probably Winston Churchill <nicolas.p.ammann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipaddress = "0.1.2"
ping = "0.2.0"
num = "0.1.32" # needed for mutable use of ipaddress iteration